# agent-ops

./: .env.example  .gitignore  AgentOps_Control_Plane_MVP.md  CLAUDE.md  Makefile  docker-compose.yml  spec.md
.claude/: settings.local.json
agent/: Dockerfile  pyproject.toml
agent/src/: config.py  main.py  prompts.py  runner.py
backend/: Dockerfile  pyproject.toml
backend/scripts/: seed_all.py  seed_db.py  seed_vector.py
backend/src/: config.py  critic.py  main.py  replay.py
backend/src/cache/: redis_client.py
backend/src/db/: database.py  pool.py
backend/src/db/migrations/: 001_init.sql  002_escalations.sql  003_replay_runs.sql  004_critic.sql  005_is_replay.sql  006_escalation_reviews_unique.sql
backend/src/vector/: chroma_client.py
docs/: NEXT_STEPS.md  RUNBOOK.md  demo_scenarios.md  schema_design.md
docs/policies/: account_security.md  etransfer_policy.md  kyc_compliance.md  rrsp_rules.md  tax_slips.md  tfsa_rules.md  trading_policies.md  wire_transfers.md
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/analytics/: page.tsx
frontend/src/app/escalations/: page.tsx
frontend/src/app/issues/: page.tsx
frontend/src/app/overview/: page.tsx
frontend/src/app/runs/[traceId]/: page.tsx
frontend/src/app/stability/: page.tsx
frontend/src/components/: ConfidenceRing.tsx  PolicyFlags.tsx  SidebarNav.tsx  StatusBadge.tsx  ToolTrace.tsx  WorkflowDiagram.tsx
frontend/src/lib/: api.ts
mcp-server/: Dockerfile  pyproject.toml
mcp-server/src/: app.py  config.py  server.py
mcp-server/src/cache/: client.py
mcp-server/src/db/: pool.py
mcp-server/src/tools/: accounts.py  knowledge.py  transactions.py
mcp-server/src/vector/: client.py
