[project]
name = "agent-ops-backend"
version = "0.1.0"
description = "AgentOps Control Plane — backend API and agent runner"
requires-python = ">=3.12"

dependencies = [
    # API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",

    # Redis
    "redis[asyncio]>=5.2.0",

    # Vector store
    "chromadb>=0.6.0",

    # AI
    "anthropic>=0.40.0",

    # Config + validation
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",

    # Logging
    "structlog>=24.4.0",

    # Data generation (seed scripts)
    "faker>=33.0.0",

    # HTTP client (calls agent service)
    "httpx>=0.28.0",

    # Resilience
    "tenacity>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "types-redis>=4.6.0",
]

[tool.ruff]
line-length    = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]   # FastAPI Depends() pattern

[tool.mypy]
python_version         = "3.12"
strict                 = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]
