[project]
name = "agentops-mcp-server"
version = "0.1.0"
description = "MCP tool server — exposes investigation tools over SSE"
requires-python = ">=3.12"

dependencies = [
    "mcp[cli]>=1.2.0",       # FastMCP + SSE transport
    "asyncpg>=0.30.0",
    "redis[asyncio]>=5.2.0",
    "chromadb>=0.6.0",
    "pydantic-settings>=2.6.0",
    "structlog>=24.4.0",
]

[tool.ruff]
line-length    = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
